make insurance box visible. add default check to test insurance to avoid a null value at all times. To Do: test insurances rendering n Update page

--- a/public/make-me-pretty/styles.css
+++ b/public/make-me-pretty/styles.css
@@ -843,7 +843,8 @@ td {
 }
 
 .insurance-box {
-    display: none;
+    /* display: none; */
+    display: flex;
     margin-top: 1.6em;
     flex-direction: column;
 }
